# backend

./: .env.template  .gitignore  Cargo.toml  Dockerfile  clippy.txt  curl.sh  filteringbrainstorm.js  inotifywait.sh  start.sh
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs  messages.rs  person.rs  persons.rs
apps/migrations/: Cargo.toml
apps/migrations/.sqlx/: query-12dfa59075ce4846698af36eceeb147628f0b31b49c504028953e9587acbae5b.json
apps/migrations/src/: m0001_create_migrations_table.rs  m0002_create_persons_table.rs  main.rs  migrations.rs
apps/migrations/src/shared/: get_pg_pool.rs
apps/ssleo/: Cargo.toml
apps/ssleo/devtools/: test_on_save.sh
apps/ssleo/src/controllers/: mod.rs
apps/ssleo/src/controllers/persons/: delete.rs  get.rs  get_single.rs  patch.rs  post.rs
apps/ssleo/src/models/: migration.rs  mod.rs
apps/ssleo/src/models/person/: create.rs  delete.rs  mod.rs  person.rs  read.rs  tests.rs  update.rs
apps/ssleo/src/shared/: get_env_var.rs
controllers/: Cargo.toml
controllers/src/: base_response.rs  lib.rs
controllers/src/persons/: delete.rs  get.rs  get_single.rs  mod.rs  patch.rs  post.rs
migrations/: Cargo.toml
migrations/src/: create_table.rs  m0001_create_migrations_table.rs  m0002_create_persons_table.rs  main.rs  migration.rs  migrations.rs
migrations/src/m0001_create_migrations_table/: down.rs  up.rs
migrations/src/m0001_create_persons_table/: up.rs
migrations/src/m0002_create_persons_table/: down.rs  mod.rs  up.rs
migrations/src/shared/: mod.rs
models/: Cargo.toml
models/src/: lib.rs  person.rs
models/src/person/: create.rs  delete.rs  mod.rs  person.rs  read.rs  tests.rs  update.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: get_pg_pool.rs  lib.rs
shared/structs/: Cargo.toml
shared/structs/src/: lib.rs
src/: main.rs
src/controllers/: base_response.rs
src/controllers/persons/: delete.rs  patch.rs  post.rs
src/models/person/: delete.rs  read.rs  tests.rs  update.rs
src/shared/: does_table_exist.rs
views/: Cargo.toml
views/src/: main.rs
