[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

[lib]
name = "controllers"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
shared = { path = "../shared" }
models = { path = "../models" }
dotenv = "0.15.0"
chrono = "0.4.34"
serde = "1.0.197"
serde_json = "1.0.114"
