[package]
name = "models"
version = "0.1.0"
edition = "2021"

[lib]
name = "models"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "time", "chrono" ] }
shared = { path = "../shared" }
dotenv = "0.15.0"
serde = "1.0.197"
chrono = { version = "0.4.34", features = ["serde"] }
