[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
axum = "0.7.4"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
models = { path = "../models" }
shared = { path = "../shared" }
serde = "1.0.197"
